--- a/mobilis_bits_mrgt_22-23/roles.html
+++ b/mobilis_bits_mrgt_22-23/roles.html
@@ -33,23 +33,23 @@
 	<tr>
 		<td><p>Programming</p></td>
 		<td><p>Bazsa</p></td>
-		<td><p>Bazsa, Gergõ, Barnus</p></td>
+		<td><p>Bazsa, Gergõ, Zsombi</p></td>
 	</tr><tr>
-		<td><p>Modeling (LDD)</p></td>
-		<td><p>Dani</p></td>
-		<td><p>Dani, Gábor, Zsófi</p></td>
+		<td><p>Modeling (Studio)</p></td>
+		<td><p>Zsófi</p></td>
+		<td><p>Zsófi, Dani, Gábor</p></td>
 	</tr><tr>
 		<td><p>Documentation</p></td>
 		<td><p>Gergõ</p></td>
-		<td><p>Gergõ, Zsombi, Gábor</p></td>
+		<td><p>Gergõ, Zsófi, Gábor</p></td>
 	</tr><tr>
 		<td><p>Video documentation</p></td>
 		<td><p>Zsombi</p></td>
 		<td><p>Zsombi, Barnus</p></td>
 	</tr><tr>
 		<td><p>Mat maintenance</p></td>
-		<td><p>Barnus</p></td>
-		<td><p>Barnus, Dani, Zsófi</p></td>
+		<td><p>Dani</p></td>
+		<td><p>Dani, Barnus, Zsófi</p></td>
 	</tr><tr>
 		<td><p>Time management</p></td>
 		<td><p>Dani</p></td>
@@ -61,7 +61,7 @@
 	</tr><tr>
 		<td><p>Robot launching</p></td>
 		<td><p>Bazsa, Zsombi</p></td>
-		<td><p>Bazsa, Zsombi, Barnus, Gábor</p></td>
+		<td><p>Bazsa, Zsombi, Barnus, Gábor, Dani</p></td>
 	</tr>
 	</table>
 	<h2>Innovation Project</h2>
